--- a/FrontPage.html
+++ b/FrontPage.html
@@ -153,7 +153,7 @@
 </head>
 <body>
 <div class="banner">
-	<span>Enterprise Master Planning</span>
+	<span>Enterprise Master Planning & Dynamic Order Fulfillment</span>
     <span>LCD, LCM & MC最佳化撮合</span>
 </div>
 	<div id="header">
