--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         </div>
     </div>
     <div class="right-panel">
-        <img src="LOGO-firsttech.png" alt="Company Logo" class="watermark">
+        <!--<img src="LOGO-firsttech.png" alt="Company Logo" class="watermark">-->
         <div class="container">
             <h1></h1>
             <input type="text" id="username" placeholder="帳號">
@@ -174,8 +174,8 @@
         </div>
     </div>
     <div id="header">
-        <img src="LOGO-firsttech.png" alt="Company Logo">
-        <div class="business-requirements">© 2003 - 2024 Firsttech Software 仁維軟體 版權所有</div>
+        <!--<img src="LOGO-firsttech.png" alt="Company Logo">-->
+        <div class="business-requirements">Copyright 2024 © 仁維軟體科技 Firsttech Software</div>
     </div>
     <script>
         var selectedModule = null;
