--- a/Overview.html
+++ b/Overview.html
@@ -143,7 +143,7 @@
     <span>LCD, LCM & MC最佳化撮合</span>
 </div>
 	<div id="header">
-        <img src="LOGO-firsttech.png" alt="Company Logo">
+        <!--<img src="LOGO-firsttech.png" alt="Company Logo">-->
 		<div class="business-requirements">© 2003 - 2024 Firsttech Software 仁維軟體 版權所有</div>
     </div>
     <div class="header-container">
