--- a/Final.html
+++ b/Final.html
@@ -143,8 +143,8 @@
     <span>LCD, LCM & MC最佳化撮合</span>
 </div>
 <div id="header">
-        <img src="LOGO-firsttech.png" alt="Company Logo">
-		<div class="business-requirements">© 2003 - 2024 Firsttech Software 仁維軟體 版權所有</div>
+        <!--<img src="LOGO-firsttech.png" alt="Company Logo">-->
+		<div class="business-requirements">Copyright 2024 © 仁維軟體科技 Firsttech Software</div>
     </div>
 <div class="header-container">
     <div>撮合结果</div>
