--- a/Blank.html
+++ b/Blank.html
@@ -63,8 +63,8 @@
 </head>
 <body>
     <div id="header">
-        <img src="LOGO-firsttech.png" alt="Company Logo">
-        <div class="business-requirements">© 2003 - 2024 Firsttech Software 仁維軟體 版權所有</div>
+        <!--<img src="LOGO-firsttech.png" alt="Company Logo">-->
+        <div class="business-requirements">Copyright 2024 © 仁維軟體科技 Firsttech Software</div>
     </div>
     <div class="spinner"></div>
     <div class="loading-text" id="loadingText">Loading</div>
