--- a/Final.html
+++ b/Final.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
         }
-		.banner {
+        .banner {
             display: flex;
             justify-content: space-between;
             background-color: #0066cc;
@@ -20,21 +20,21 @@
             color: rgba(255, 255, 255, 1);
             border-bottom: 1px solid #ddd;
         }
-		#header {
-			position: fixed;
-			bottom: 20px;
-			left: 48%;
-			transform: translateX(-50%);
-			text-align: center;
-			opacity: 0.9;
-		}
-		#header img {
-			max-width: 100px; 
-			height: auto;
-		}
-		.business-requirements {
-			font-size: 10px;
-		}
+        #header {
+            position: fixed;
+            bottom: 20px;
+            left: 48%;
+            transform: translateX(-50%);
+            text-align: center;
+            opacity: 0.9;
+        }
+        #header img {
+            max-width: 100px;
+            height: auto;
+        }
+        .business-requirements {
+            font-size: 10px;
+        }
         .header-container {
             display: flex;
             justify-content: space-between;
@@ -92,11 +92,19 @@
             background-color: #4CAF50;
             color: white;
         }
+        th.abnormal-header {
+            background-color: red;
+        }
         tr:nth-child(even) {
             background-color: #f2f2f2;
         }
         tr:hover {
             background-color: #ddd;
+        }
+        .abnormal {
+            background-color: red;
+            color: white;
+            font-weight: bold;
         }
         .result-summary {
             margin: 20px;
@@ -105,7 +113,7 @@
         .result-summary div {
             display: flex;
             justify-content: space-between;
-            margin-bottom: 10px;
+            margin-bottom: 30px;
         }
         .back-button {
             position: fixed;
@@ -139,13 +147,13 @@
 </head>
 <body>
 <div class="banner">
-	<span>Enterprise Master Planning & Dynamic Order Fulfillment</span>
+    <span>Enterprise Master Planning & Dynamic Order Fulfillment</span>
     <span>LCD, LCM & MC最佳化撮合</span>
 </div>
 <div id="header">
-        <!--<img src="LOGO-firsttech.png" alt="Company Logo">-->
-		<div class="business-requirements">Copyright 2024 © 仁維軟體科技 Firsttech Software</div>
-    </div>
+    <!--<img src="LOGO-firsttech.png" alt="Company Logo">-->
+    <div class="business-requirements">Copyright 2024 © 仁維軟體科技 Firsttech Software</div>
+</div>
 <div class="header-container">
     <div>撮合结果</div>
     <div class="user-info">
@@ -166,6 +174,7 @@
                     <th>需求數量</th>
                     <th>滿足數量</th>
                     <th>置換結果</th>
+                    <th class="abnormal-header">異常</th>
                 </tr>
             </thead>
             <tbody>
@@ -179,81 +188,107 @@
         <div>置換機種筆數: <span id="a">30筆</span></div>
         <div>引擎運行時間: <span id="runTime">0.6312404</span></div>
         <div>撮合完成日期: <span id="finishTime">2024-07-30 15:25</span></div>
+        <div><span style="color: red; font-weight: bold;">提醒: 機種NB00010087置換，營收會減少2,100</span></div>
     </div>
 </div>
 
 <button class="back-button" id="backButton">返回首頁</button>
 <button class="last-button" id="lastButton">能量總攬</button>
 <script>
-    document.addEventListener('DOMContentLoaded', function() {
-        const table = document.getElementById('resultTable').getElementsByTagName('tbody')[0];
-        const rows = [
-            ["NB00010081", "202407", "W28", "W29", "14350", "3000"],
-            ["NB00010081", "202408", "W33", "W34", "1000", "1000"],
-            ["NB00010083", "202408", "W33", "W34", "5000", "0"],
-            ["NB00010084", "202408", "W33", "W37", "3000", "0"],
-            ["NB00010085", "202409", "W36", "W37", "3600", "900"],
-            ["NB00010086", "202407", "W28", "W34", "17000", "10000"],
-            ["NB00010087", "202407", "W28", "W34", "17000", "5000"],
-            ["NB00010088", "202407", "W28", "W35", "20000", "0"],
-            ["NB00010089", "202407", "W28", "W29", "30000", "0"],
-            ["NB00010089", "202407", "W29", "W30", "15000", "15000"],
-            ["NB00010089", "202408", "W33", "W35", "25000", "22500"],
-            ["NB00010092", "202407", "W29", "W35", "30000", "0"],
-            ["NB00010093", "202407", "W29", "W34", "1000", "0"],
-            ["NB00010094", "202407", "W29", "W30", "3000", "0"],
-            ["NB00010095", "202407", "W30", "W33", "46600", "0"],
-            ["NB00010096", "202407", "W29", "W30", "10000", "0"],
-            ["NB00010097", "202407", "W29", "W30", "10000", "0"],
-            ["NB00010098", "202408", "W32", "W34", "5000", "0"],
-            ["NB00010098", "202408", "W32", "W35", "1000", "1000"],
-            ["NB00010096", "202408", "W33", "W35", "10000", "3000"],
-            ["NB00010101", "202408", "W33", "W35", "11500", "0"]
-        ];
+	document.addEventListener('DOMContentLoaded', function() {
+		const table = document.getElementById('resultTable').getElementsByTagName('tbody')[0];
+		let rows = [
+			["NB00010081", "202407", "W28", "W29", "14350", "3000"],
+			["NB00010081", "202408", "W33", "W34", "1000", "1000"], 
+			["NB00010083", "202408", "W33", "W34", "5000", "0"],
+			["NB00010084", "202408", "W33", "W37", "3000", "0"],
+			["NB00010085", "202409", "W36", "W37", "3600", "900"],
+			["NB00010086", "202407", "W28", "W34", "17000", "10000"],
+			["NB00010087", "202407", "W28", "W34", "17000", "5000"],
+			["NB00010088", "202407", "W28", "W35", "20000", "0"],
+			["NB00010089", "202407", "W28", "W29", "30000", "0"],
+			["NB00010089", "202407", "W29", "W30", "15000", "15000"],
+			["NB00010089", "202408", "W33", "W35", "25000", "22500"],
+			["NB00010092", "202407", "W29", "W35", "30000", "0"],
+			["NB00010093", "202407", "W29", "W34", "1000", "0"],
+			["NB00010094", "202407", "W29", "W30", "3000", "0"],
+			["NB00010095", "202407", "W30", "W33", "46600", "0"],
+			["NB00010096", "202407", "W29", "W30", "10000", "0"],
+			["NB00010097", "202407", "W29", "W30", "10000", "0"],
+			["NB00010098", "202408", "W32", "W34", "5000", "0"],
+			["NB00010098", "202408", "W32", "W35", "1000", "1000"],
+			["NB00010096", "202408", "W33", "W35", "10000", "3000"],
+			["NB00010101", "202408", "W33", "W35", "11500", "0"]
+		];
 
-        rows.forEach(row => {
-            const tr = document.createElement('tr');
-            row.forEach(cell => {
-                const td = document.createElement('td');
-                td.textContent = cell;
-                tr.appendChild(td);
-            });
-            const satisfiedAmount = parseInt(row[5], 10);
-            const resultCell = document.createElement('td');
-            resultCell.textContent = satisfiedAmount === 0 ? 'X' : 'O';
-            tr.appendChild(resultCell);
-            table.appendChild(tr);
-        });
+		rows.sort((a, b) => {
+			const aResult = parseInt(a[5], 10) > 0 ? "O" : "X";
+			const bResult = parseInt(b[5], 10) > 0 ? "O" : "X";
+			return aResult === bResult ? 0 : aResult === "O" ? -1 : 1;
+		});
 
-        document.getElementById('runTime').textContent = getRandomRunTime();
-        document.getElementById('finishTime').textContent = getCurrentTime();
-    });
+		rows.forEach(row => {
+			const tr = document.createElement('tr');
+			row.forEach(cell => {
+				const td = document.createElement('td');
+				td.textContent = cell;
+				tr.appendChild(td);
+			});
+			const satisfiedAmount = parseInt(row[5], 10);
+			const resultCell = document.createElement('td');
+			resultCell.textContent = satisfiedAmount === 0 ? 'X' : 'O';
+			tr.appendChild(resultCell);
 
-    function getRandomRunTime() {
-        return (Math.random() * (7 - 5) + 5).toFixed(2)+'秒';
-    }
+			const abnormalCell = document.createElement('td');
+			if (row[0] === "NB00010087") {
+				abnormalCell.textContent = '!';
+				abnormalCell.classList.add('abnormal');
+			} else {
+				abnormalCell.textContent = '';
+			}
+			tr.appendChild(abnormalCell);
 
-    function getCurrentTime() {
-        const now = new Date();
-        const year = now.getFullYear();
-        const month = String(now.getMonth() + 1).padStart(2, '0');
-        const day = String(now.getDate()).padStart(2, '0');
-        const hours = String(now.getHours()).padStart(2, '0');
-        const minutes = String(now.getMinutes()).padStart(2, '0');
-        return `${year}-${month}-${day} ${hours}:${minutes}`;
-    }
+			// Highlight specific rows
+			if (
+				(row[0] === "NB00010081" && row[1] === "202408" && row[2] === "W33" && row[3] === "W34" && row[4] === "1000" && row[5] === "1000") ||
+				(row[0] === "NB00010098" && row[1] === "202408" && row[2] === "W32" && row[3] === "W35" && row[4] === "1000" && row[5] === "1000")
+			) {
+				tr.style.backgroundColor = 'yellow'; // Add highlight
+			}
 
-    document.getElementById('backButton').addEventListener('click', () => {
-        window.location.href = 'FrontPage.html';
-    });
-	
+			table.appendChild(tr);
+		});
+
+		document.getElementById('runTime').textContent = getRandomRunTime();
+		document.getElementById('finishTime').textContent = getCurrentTime();
+	});
+
+	function getRandomRunTime() {
+		return (Math.random() * (7 - 5) + 5).toFixed(2) + '秒';
+	}
+
+	function getCurrentTime() {
+		const now = new Date();
+		const year = now.getFullYear();
+		const month = String(now.getMonth() + 1).padStart(2, '0');
+		const day = String(now.getDate()).padStart(2, '0');
+		const hours = String(now.getHours()).padStart(2, '0');
+		const minutes = String(now.getMinutes()).padStart(2, '0');
+		return `${year}-${month}-${day} ${hours}:${minutes}`;
+	}
+
+	document.getElementById('backButton').addEventListener('click', () => {
+		window.location.href = 'FrontPage.html';
+	});
+
 	document.getElementById('lastButton').addEventListener('click', () => {
-        window.location.href = 'Overview.html';
-    });
+		window.location.href = 'Overview.html';
+	});
 
-    function logout() {
-        window.location.href = 'index.html';
-    }
+	function logout() {
+		window.location.href = 'index.html';
+	}
+
 </script>
 
 </body>
