--- a/Overview.html
+++ b/Overview.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="Overview" content="width=device-width, initial-scale=1.0">
-    <title>能量總攬</title>
+    <title>能量總覽</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -147,7 +147,7 @@
 		<div class="business-requirements">Copyright 2024 © 仁維軟體科技 Firsttech Software</div>
     </div>
     <div class="header-container">
-        <div>能量總攬</div>
+        <div>能量總覽</div>
         <div class="tabs">
             <div class="tab active" data-target="LCD">LCD</div>
             <div class="tab" data-target="LCM">LCM</div>
@@ -254,7 +254,7 @@
         </table>
     </div>
 
-    <button class="start-button" id="startMatchButton">開始撮合</button>
+    <button class="start-button" id="startMatchButton">排程最佳化</button>
     <button class="back-button" id="backButton">返回首頁</button>
 
     <script>
