--- a/FrontPage.html
+++ b/FrontPage.html
@@ -115,12 +115,15 @@
             margin: 20px;
         }
         .scan-button button {
-            padding: 9px 20px;
+            position: fixed;
+            right: 20px;
+            bottom: 20px;
+            padding: 10px 20px;
             background-color: #007BFF;
             color: white;
             border: none;
-            cursor: pointer;
             border-radius: 4px;
+            cursor: pointer;
             font-size: 16px;
         }
         .scan-button button:hover {
