--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="module-list">
             <h3>模組清單</h3>
             <table>
-                <tr><td onclick="selectModule(this)">自訂模組：LCD, LCM & MC 最佳化整合</td></tr>
+                <tr><td onclick="selectModule(this)">自訂模組：LCD, LCM & MC 最佳化排程</td></tr>
                 <tr><td>生產規劃 (Production Planning)</td></tr>
                 <tr><td>採購規劃 (Procurement Planning)</td></tr>
                 <tr><td>分銷規劃 (Distribution Planning)</td></tr>
