--- a/FrontPage.html
+++ b/FrontPage.html
@@ -157,7 +157,7 @@
 <body>
 <div class="banner">
 	<span>Enterprise Master Planning & Dynamic Order Fulfillment</span>
-    <span>LCD, LCM & MC最佳化撮合</span>
+    <span>LCD, LCM & MC最佳化排程</span>
 </div>
     <div id="header">
         <!--<img src="LOGO-firsttech.png" alt="Company Logo">-->
