--- a/Overview.html
+++ b/Overview.html
@@ -140,7 +140,7 @@
 <body>
 <div class="banner">
 	<span>Enterprise Master Planning & Dynamic Order Fulfillment</span>
-    <span>LCD, LCM & MC最佳化撮合</span>
+    <span>LCD, LCM & MC最佳化排程</span>
 </div>
 	<div id="header">
         <!--<img src="LOGO-firsttech.png" alt="Company Logo">-->
