--- a/Final.html
+++ b/Final.html
@@ -183,15 +183,15 @@
     </div>
 
     <div class="result-summary">
-        <div>需求滿足數量: <span id="n">61400片</span></div>
+        <div>需求滿足數量: <span id="n">61,400片</span></div>
         <div>需求滿足筆數: <span id="m">9筆</span></div>
         <div>置換機種筆數: <span id="a">30筆</span></div>
         <div>連結Server時間: <span id="serverTime">0.6312404</span></div>
 		<div>實際運算時間: <span id="runTime">0.6312404</span></div>
-        <div>最佳化完成日期: <span id="finishTime">2024-07-30 15:25</span></div>
+        <div>模擬完成日期: <span id="finishTime">2024-07-30 15:25</span></div>
         <div><span style="color: red; font-weight: bold;">提醒: 機種NB00010087置換，營收會減少2,100</span></div>
-		<div>總需求 <span id="b">21 機種 | 數量 279,050</span></div>
-		<div>調整產能置換建議 <span id="c">9 機種 | 數量&nbsp;&nbsp;&nbsp;61,400</span></div>
+		<div>總需求 <span id="b">21 機種 | 數量 279,050片</span></div>
+		<div>調整產能置換建議 <span id="c">9 機種 | 數量&nbsp;&nbsp;&nbsp;61,400片</span></div>
 		<div>原計畫 9 機種營收 <span id="d">100,100</span></div>
 		<div>置換後 9 機種營收 <span id="e">98,000</span></div>
     </div>
